# mcp-applemusic

./: CHANGELOG.md  README.md  SKILL.md  pyproject.toml
src/applemusic_mcp/: __init__.py  applescript.py  server.py
tests/: test_applescript.py  test_integration.py  test_server.py
